# arcore-android-sdk

./: .gitignore
samples/hello_ar_c/app/: CMakeLists.txt
samples/hello_ar_c/app/release/: output-metadata.json
samples/hello_ar_c/app/src/main/cpp/: background_renderer.cc  background_renderer.h  hello_ar_application.cc  hello_ar_application.h
